@@ -59,6 +59,10 @@ dependencies of the above files are only relevant for batch build.
 
 * Highlighting of entity def/ref positions wrt. cursor.
 
+* Action "isabelle.select-entity" (shortcut CS+ENTER) selects all
+occurences of the formal entity at the caret position. This facilitates
+systematic renaming.
+
 * Document markup works across multiple Isar commands, e.g. the results
 established at the end of a proof are properly identified in the theorem
 statement.
